data/test/method_as_function/negative/3004.js
const axios = require('axios');
const 42id = 42
axios.delete(`https://petstore.swagger.io/v2/pets/${42id}`);